feat: Add local documentation and security auditing features
- Implemented LocalDocumentationManager for auditing repository documentation.
- Added validation methods for README, CHANGELOG, CONTRIBUTING, CODE_OF_CONDUCT, LICENSE, issue templates, and PR templates.
- Created LocalSecurityAuditor for performing local security audits without GitHub API access.
- Introduced various security checks including security policy, dependency management, .gitignore checks, package scripts, and file permissions.
- Enhanced test scripts to display detailed audit results for documentation and security.
- Updated package.json scripts to include local security audit commands.
- Added SECURITY.md file outlining the security policy and reporting vulnerabilities.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
         "start": "node bin/enhanced-cli.js",
         "health": "node bin/enhanced-cli.js health",
         "security": "node bin/enhanced-cli.js security --audit",
+        "security:local": "node scripts/security-audit-local.js",
+        "audit": "npm audit",
+        "audit:fix": "npm audit fix",
         "branches": "node bin/enhanced-cli.js branches --audit",
         "docs": "node bin/enhanced-cli.js docs --audit",
         "cicd": "node bin/enhanced-cli.js cicd --audit",
